--- a/index.html
+++ b/index.html
@@ -1,25 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <title>Josué García | Desarollador Web</title>
+  <link rel="shortcut icon" href="img/Josué.png" type="image/x-icon">
   <style>
-    .fondo{
-      background-image: url(img/fondo.jpg);
+    .fondo {
+      background-image: url(../img/fondo.jpg);
       height: 100vh;
       background-size: cover;
-      background-position: center;
+      background-position: center center;
+      max-width: 100%;
     }
   </style>
 </head>
+
 <body>
+  <!-- Cabecera -->
   <div class="row fondo align-items-center">
     <h1 class="text-white text-center">Josué García | Desarrollador Web</h1>
   </div>
+  <!-- Menú de navegación -->
+  <nav class="navbar navbar-expand-md bg-body-tertiary">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"><img class="w-50" src="img/SolarProgrammingBold.svg" alt="Icono"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Proyectos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">
+              Contacto
+            </a>
+          </li>
+        </ul>
+        <form class="d-flex" role="search">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
+  <!-- About me -->
+  <div class="container mt-3">
+    <h1 class="text-center text-dark text-uppercase fst-italic fw-bold">Sobre mi</h1>
+    <p class="bg-primary text-white p-2 ">
+      ¡Hola! Soy Josué García, un desarrollador web apasionado con más de 2 años de experiencia en la creación de sitios web y aplicaciones web funcionales y atractivas. Mi objetivo es transformar ideas complejas en soluciones digitales intuitivas y eficientes.
+      Durante mi carrera, he tenido la oportunidad de trabajar en una variedad de proyectos, desde pequeños sitios web informativos hasta complejas aplicaciones web empresariales. Mi enfoque se centra en la escritura de código limpio y mantenible, y en la adopción de las mejores prácticas de desarrollo web.
+    </p>
+  </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <!-- Habilidades -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
