--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="#about">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Proyectos</a>
+            <a class="nav-link" href="#proyectos">Proyectos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="#contact">
               Contacto
             </a>
           </li>
@@ -55,15 +55,51 @@
   </nav>
 
   <!-- About me -->
-  <div class="container mt-3">
+  <div id="about" class="container mt-3">
     <h1 class="text-center text-dark text-uppercase fst-italic fw-bold">Sobre mi</h1>
     <p class="bg-primary text-white p-2 ">
-      ¡Hola! Soy Josué García, un desarrollador web apasionado con más de 2 años de experiencia en la creación de sitios web y aplicaciones web funcionales y atractivas. Mi objetivo es transformar ideas complejas en soluciones digitales intuitivas y eficientes.
-      Durante mi carrera, he tenido la oportunidad de trabajar en una variedad de proyectos, desde pequeños sitios web informativos hasta complejas aplicaciones web empresariales. Mi enfoque se centra en la escritura de código limpio y mantenible, y en la adopción de las mejores prácticas de desarrollo web.
+      ¡Hola! Soy Josué García, un desarrollador web apasionado con más de 2 años de experiencia en la creación de sitios
+      web y aplicaciones web funcionales y atractivas. Mi objetivo es transformar ideas complejas en soluciones
+      digitales intuitivas y eficientes.
+      Durante mi carrera, he tenido la oportunidad de trabajar en una variedad de proyectos, desde pequeños sitios web
+      informativos hasta complejas aplicaciones web empresariales. Mi enfoque se centra en la escritura de código limpio
+      y mantenible, y en la adopción de las mejores prácticas de desarrollo web.
     </p>
+
+    <!-- Proyectos -->
+    <div id="proyectos" class="row justify-content-evenly">
+      <div class="card p-0 m-2" style="width: 18rem;">
+        <img src="img/Project-1.png" class="card-img-top h-50" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Site Web | Food</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Saber más</a>
+        </div>
+      </div>
+      <div class="card p-0 m-2" style="width: 18rem;">
+        <img src="img/Project-2.png" class="card-img-top w-100 h-50" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Site Web | Barber</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Saber más</a>
+        </div>
+      </div>
+      <div class="card p-0 m-2" style="width: 18rem;">
+        <img src="img/Project-3.png" class="card-img-top h-50" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Site Web | Ecommerce</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-primary">Saber más</a>
+        </div>
+      </div>
+    </div>
+
   </div>
 
-  <!-- Habilidades -->
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
