Apartado de footer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
         </div>
       </div>
     </div>
-
+  </div>
+  <div class="container text-center bg-body m-4">
+    <p>Copyright Todos los Derechos Reservados - <a class="text-decoration-none" href="https://ed.team">Más info</a></p>
   </div>
 
 
