--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h1 class="text-white text-center">Josué García | Desarrollador Web</h1>
   </div>
   <!-- Menú de navegación -->
-  <nav class="navbar navbar-expand-md bg-body-tertiary">
+  <nav class="navbar navbar-expand-md bg-body-tertiary sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#"><img class="w-50" src="img/SolarProgrammingBold.svg" alt="Icono"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -67,7 +67,7 @@
     </p>
 
     <!-- Proyectos -->
-    <div id="proyectos" class="row justify-content-evenly">
+    <div id="proyectos" class="row justify-content-between">
       <div class="card p-0 m-2" style="width: 18rem;">
         <img src="img/Project-1.png" class="card-img-top h-50" alt="...">
         <div class="card-body">
@@ -96,9 +96,44 @@
         </div>
       </div>
     </div>
+    <!-- Contacto -->
+    <form id="contact">
+      <h1 class="text-center text-dark text-uppercase fst-italic fw-bold my-4">Contactame</h1>
+      <div class="row align-items-center">
+        <div class="col-6">
+          <div class="row mb-3 align-items-center">
+            <div class="col-md-2">
+              <label>Nombre</label>
+            </div>
+            <div class="col-md-10">
+              <input class="form-control" type="text" placeholder="Digite su nombre">
+            </div>
+          </div>
+          <div class="row mb-3 align-items-center">
+            <div class="col-md-2">
+              <label>Email</label>
+            </div>
+            <div class="col-md-10">
+              <input class="form-control" type="email" placeholder="Digite su correo">
+            </div>
+          </div>
+          <div class=" d-flex flex-column align-items-center mb-3">
+            <button class="btn btn-primary ">Enviar</button>
+          </div>
+        </div>
+        <div class="col-6 d-flex justify-content-center">
+          <img class="w-75 img-fluid img-thumbnail rounded" src="img/team.png" alt="Equipo">
+        </div>
+      </div>
+    </form>
   </div>
-  <div class="container text-center bg-body m-4">
-    <p>Copyright Todos los Derechos Reservados - <a class="text-decoration-none" href="https://ed.team">Más info</a></p>
+  <!-- Footer -->
+  <div class="container-fluid bg-body-secondary p-4 mt-3">
+    <div class="d-flex justify-content-center align-items-center">
+      <p class="m-0">Copyright Todos los Derechos Reservados - <a class="text-decoration-none"
+          href="https://ed.team">Más
+          información</a></p>
+    </div>
   </div>
 
 
